<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF1060E"
    android:orientation="vertical"
    tools:context="com.chinmay.students.questionanswersapp.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_your_department"
        android:textSize="30sp"
        android:textColor="#a8f403"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="30dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/firstYear"
        android:background="@color/colorPrimary"
        android:textColor="#a8f403"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="5dp"
        android:onClick="departmentSelection"
        android:text="@string/first_year"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/electronicsAndCommunication"
        android:background="@color/colorPrimary"
        android:textColor="#a8f403"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="5dp"
        android:onClick="departmentSelection"
        android:text="@string/electronics_and_communication"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/computerScience"
        android:background="@color/colorPrimary"
        android:textColor="#a8f403"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="5dp"
        android:onClick="departmentSelection"
        android:text="@string/computer_science"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/informationScience"
        android:background="@color/colorPrimary"
        android:textColor="#a8f403"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="5dp"
        android:onClick="departmentSelection"
        android:text="@string/information_science"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/electrical"
        android:background="@color/colorPrimary"
        android:textColor="#a8f403"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="5dp"
        android:onClick="departmentSelection"
        android:text="@string/electrical"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mechanical"
        android:background="@color/colorPrimary"
        android:textColor="#a8f403"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="5dp"
        android:onClick="departmentSelection"
        android:text="@string/mechanical"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/civil"
        android:background="@color/colorPrimary"
        android:textColor="#a8f403"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="5dp"
        android:onClick="departmentSelection"
        android:text="@string/civil"/>

</LinearLayout>
